examples/test/testpolicy13728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13728
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key42: value6
      key0: value41
      key49: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value13
          key32: value13
          key17: value11
